--- a/apps/drec-angular-ui/src/app/view/device/alldevices/alldevices.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/alldevices/alldevices.component.html
@@ -42,42 +42,43 @@
       </ng-container> -->
 
           <!-- Position Column -->
-          <ng-container matColumnDef="serialno">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-            <td mat-cell *matCellDef="let row;let i=index"> {{i+1}} </td>
+          <ng-container matColumnDef="onboarding_date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> OnBoarding Date </th>
+            <td mat-cell *matCellDef="let row;let i=index"> {{row.createdAt| date:'EEE d MMM y hh:mm:ss'}} </td>
+          </ng-container>
+          <ng-container matColumnDef="projectName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> projectName </th>
+            <td mat-cell *matCellDef="let element"> {{element.projectName}} </td>
           </ng-container>
           <ng-container matColumnDef="externalId">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
             <td mat-cell *matCellDef="let element"> {{element.externalId}} </td>
           </ng-container>
 
-          <!-- Name Column -->
+         
           <ng-container matColumnDef="countryCode">
-            <th mat-header-cell *matHeaderCellDef> Country </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Country </th>
             <td mat-cell *matCellDef="let element"> {{element.countryname}} </td>
           </ng-container>
 
-          <!-- Weight Column -->
-          <ng-container matColumnDef="projectName">
-            <th mat-header-cell *matHeaderCellDef> projectName </th>
-            <td mat-cell *matCellDef="let element"> {{element.projectName}} </td>
-          </ng-container>
+        
+        
 
-          <!-- Symbol Column -->
           <ng-container matColumnDef="fuelCode">
-            <th mat-header-cell *matHeaderCellDef> FuelCode </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> FuelCode </th>
             <td mat-cell *matCellDef="let element"> {{element.fuelname}} </td>
           </ng-container>
           <!-- Status Column -->
           <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef> Status </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
             <td mat-cell *matCellDef="let element"> {{element.status}} </td>
           </ng-container>
           <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef>Action</th>
             <td mat-cell *matCellDef="let row; let i=index;">
               <!-- <button>certificate</button> -->
-              <button class="btn-primary btn btn-sm but-cont " target="_blank">Edit</button>
+              <a  [routerLink]="['../edit']" [queryParams]="{id:row.externalId}"><mat-icon>edit</mat-icon></a>
+              <!-- <a  [routerLink]="['../edit']" [queryParams]="{id:row.externalId}"><mat-icon>add</mat-icon></a> -->
 
             </td>
           </ng-container>
