--- a/apps/drec-angular-ui/src/app/view/redemption-report/redemption-report.component.html
+++ b/apps/drec-angular-ui/src/app/view/redemption-report/redemption-report.component.html
@@ -35,11 +35,11 @@
               <th mat-header-cell *matHeaderCellDef> FuelCode </th>
               <td mat-cell *matCellDef="let element"> {{element.fuelCode}} </td>
             </ng-container>
-            <ng-container matColumnDef="commissioningDateRange">
+            <!-- <ng-container matColumnDef="commissioningDateRange">
               <th mat-header-cell *matHeaderCellDef> commissioningDateRange </th>
               <td mat-cell *matCellDef="let element"> {{element.commissioningDateRange}} </td>
             </ng-container>
-           
+            -->
             <ng-container matColumnDef="beneficiary">
               <th mat-header-cell *matHeaderCellDef> Beneficiary </th>
               <td mat-cell *matCellDef="let element"> {{element.beneficiary}} </td>
