add fixed invalid devicid in meterread and display devicelist

--- a/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
+++ b/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
@@ -46,7 +46,7 @@
         <mat-icon>list</mat-icon>
         <span>My Reservations</span>
       </button>
-      <button mat-button class="menu-button" routerLinkActive="active" routerLink="/myreservation"
+      <button mat-button class="menu-button" routerLinkActive="active" routerLink="/All_certificate"
       *ngIf="loginuser.role ==='Buyer'">
       <mat-icon>list</mat-icon>
       <span>Certificate</span>
