--- a/apps/drec-angular-ui/src/app/view/device/add-devices/add-devices.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/add-devices/add-devices.component.html
@@ -103,7 +103,7 @@
                                 <div class="example-container1 row">
                                     <div class="col-md-3">
                                         <mat-form-field appearance="outline">
-                                            <mat-label class="text-capitalize">capacity</mat-label>
+                                            <mat-label class="text-capitalize">Capacity(kW)</mat-label>
                                             <input matInput placeholder="capacity" type="number"
                                                 formControlName='capacity' [min]=1 autocomplete="off">
                                             <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
