--- a/apps/drec-angular-ui/src/app/view/redemption-report/redemption-report.component.html
+++ b/apps/drec-angular-ui/src/app/view/redemption-report/redemption-report.component.html
@@ -50,7 +50,7 @@
               <td mat-cell *matCellDef="let element"> {{element.beneficiary_address}} </td>
             </ng-container>
             <ng-container matColumnDef="claimCoiuntryCode">
-              <th mat-header-cell *matHeaderCellDef> claimCoiuntryCode </th>
+              <th mat-header-cell *matHeaderCellDef> claimCountryCode </th>
               <td mat-cell *matCellDef="let element"> {{element.claimCoiuntryCode}} </td>
             </ng-container>
             <ng-container matColumnDef="capacityRange">
