device display list

--- a/apps/drec-angular-ui/src/app/view/device/alldevices/alldevices.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/alldevices/alldevices.component.html
@@ -23,7 +23,8 @@
         <mat-label>Filter</mat-label>
         <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
       </mat-form-field>
-      <div class="content mat-elevation-z8 text-center">
+      <mat-progress-spinner [mode]="'indeterminate'" *ngIf="loading"></mat-progress-spinner>
+      <div class="content mat-elevation-z8 text-center" *ngIf="!loading">
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
 
           <!-- Checkbox Column -->
