--- a/apps/drec-angular-ui/src/app/view/device/alldevices/alldevices.component.scss
+++ b/apps/drec-angular-ui/src/app/view/device/alldevices/alldevices.component.scss
@@ -30,3 +30,10 @@
 
     // }
   }
+  mat-progress-spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 5;
+}
