--- a/apps/drec-angular-ui/src/app/view/device/add-bulk-device/add-bulk-device.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/add-bulk-device/add-bulk-device.component.html
@@ -52,8 +52,8 @@
           {{ message }}
         </div>
       </form>
-
-        <div class="content mat-elevation-z8 text-center">
+      <mat-progress-spinner [mode]="'indeterminate'" *ngIf="loading"></mat-progress-spinner>
+        <div class="content mat-elevation-z8 text-center" >
           <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
 
 
@@ -63,26 +63,26 @@
               <td mat-cell *matCellDef="let row;let i=index"> {{i+1}} </td>
             </ng-container>
             <ng-container matColumnDef="createdAt">
-              <th mat-header-cell *matHeaderCellDef> createdAt </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> createdAt </th>
               <td mat-cell *matCellDef="let element"> {{element.createdAt}} </td>
             </ng-container>
 
             <!-- Name Column -->
             <ng-container matColumnDef="jobId">
-              <th mat-header-cell *matHeaderCellDef> jobId </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> jobId </th>
               <td mat-cell *matCellDef="let element"> {{element.jobId}} </td>
             </ng-container>
 
             <!-- Weight Column -->
             <ng-container matColumnDef="fileId">
-              <th mat-header-cell *matHeaderCellDef> fileId </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> fileId </th>
               <td mat-cell *matCellDef="let element"> {{element.fileId}} </td>
             </ng-container>
 
 
             <!-- Status Column -->
             <ng-container matColumnDef="status">
-              <th mat-header-cell *matHeaderCellDef> Status </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
               <td mat-cell *matCellDef="let element"> {{element.status}} </td>
             </ng-container>
             <ng-container matColumnDef="actions">
