add tostar in bulk log list current externalid not found

--- a/apps/drec-angular-ui/src/app/view/device/add-devices/add-devices.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/add-devices/add-devices.component.html
@@ -117,7 +117,7 @@
 
                                             <mat-select formControlName='offTaker' placeholder="offTaker">
 
-                                                <mat-option *ngFor="let code of offteker" [value]="code">
+                                                <mat-option *ngFor="let code of offtaker" [value]="code">
                                                     {{code}}
                                                 </mat-option>
                                             </mat-select>
@@ -165,7 +165,7 @@
                                             <mat-select formControlName='deviceDescription'
                                                 placeholder="deviceDescription">
 
-                                                <mat-option *ngFor="let code of devicediscription" [value]="code">
+                                                <mat-option *ngFor="let code of devicedescription" [value]="code">
                                                     {{code}}
                                                 </mat-option>
                                             </mat-select>
