--- a/apps/drec-angular-ui/src/app/view/device/add-bulk-device/add-bulk-device.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/add-bulk-device/add-bulk-device.component.html
@@ -178,7 +178,7 @@
             <ng-container matColumnDef="Action">
               <th mat-header-cell *matHeaderCellDef> Action </th>
               <td mat-cell *matCellDef="let element">
-                <a class="btn-primary btn btn-sm but-cont "  [routerLink]="['../edit']" [queryParams]="{id:element.externalId}" *ngIf="element.status==='Success with validation errors, please update fields'">Edit</a>
+                <a class="btn-primary btn btn-sm but-cont " (click)="UpdateDevice(element.externalId)"  *ngIf="element.status==='Success with validation errors, please update fields'">Edit</a>
 
               </td>
             </ng-container>
