new redaemption list in ui

--- a/apps/drec-angular-ui/src/app/view/device/add-bulk-device/add-bulk-device.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/add-bulk-device/add-bulk-device.component.html
@@ -31,7 +31,7 @@
             <mat-form-field appearance="outline">
               <div>
                 <mat-toolbar>
-                  <input matInput [value]="fileName" />
+                  <input matInput [value]="fileName" >
 
                   <button mat-flat-button color="primary" [disabled]="!currentFile" (click)="upload()">
                     Upload
