add new component add reservation form

--- a/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
+++ b/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
@@ -56,7 +56,7 @@
         <mat-icon>list</mat-icon>
         <span class="text-start">Redemption Report</span>
       </button>
-      <button mat-button class="menu-button" routerLinkActive="active" routerLink="/add"
+      <button mat-button class="menu-button" routerLinkActive="active" routerLink="/add/reservation"
         *ngIf="loginuser.role ==='Buyer'">
         <mat-icon>add_circle</mat-icon>
         <span>Add Reservation</span>
