--- a/apps/drec-angular-ui/src/app/view/add-reservation/add-reservation.component.html
+++ b/apps/drec-angular-ui/src/app/view/add-reservation/add-reservation.component.html
@@ -9,7 +9,7 @@
 
         </mat-card-header>
 
-        <mat-card-content class="mat-body-cont text-center">
+        <mat-card-content class="mat-body-cont">
             <form [formGroup]="reservationForm" (ngSubmit)="onSubmit()">
                 <div class="example-container1 row">
                     <div class="col-md-3">
@@ -35,8 +35,8 @@
                         <mat-form-field appearance="outline">
                             <mat-label class="text-capitalize">Start Date </mat-label>
                             <input matInput [ngxMatDatetimePicker]="picker" placeholder="Choose a date"
-                                formControlName="reservationStartDate" 
-                                autocomplete="off" (ngModelChange)="onEndChangeEvent($event)">
+                                formControlName="reservationStartDate" autocomplete="off"
+                                (ngModelChange)="onEndChangeEvent($event)">
                             <mat-datepicker-toggle matSuffix [for]="$any(picker)"></mat-datepicker-toggle>
                             <ngx-mat-datetime-picker #picker [showSpinners]="true" [showSeconds]="false" [stepHour]="1"
                                 [stepMinute]="1" [stepSecond]="1" [touchUi]="false" [enableMeridian]="false"
@@ -79,7 +79,7 @@
                             <mat-label class="text-capitalize">BlockchainAddress</mat-label>
 
                             <input matInput placeholder="blockchainAddress" type="text"
-                                formControlName='blockchainAddress'  autocomplete="off">
+                                formControlName='blockchainAddress' autocomplete="off">
 
                         </mat-form-field>
                     </div>
@@ -95,9 +95,9 @@
 
 
                     </div>
-                    
+
                 </div>
-                <div class="example-container1 row"> 
+                <div class="example-container1 row">
                     <div class="col-md-4">
 
                         <mat-radio-group
@@ -113,7 +113,7 @@
                     <div class="col-md-4">
 
                         <mat-radio-group formControlName='authorityToExceed'>
-                            <span>authorityToExceed:</span>
+                            <span>Authority to Exceed:</span>
                             <br>
                             <mat-radio-button [value]=true checked>True</mat-radio-button>
                             <mat-radio-button [value]=false>False</mat-radio-button>
@@ -135,75 +135,75 @@
                     </mat-card-header>
                     <hr>
                     <mat-card-content>
-                        <h3>filter device using some value</h3>
+                        <h3>Use filters to select devices </h3>
                         <form [formGroup]="FilterForm">
-                        <div class="example-container1 row">
-                            <div class="col-md-3">
-                                <mat-form-field>
-                                    <mat-label class="text-capitalize">Select country Code</mat-label>
-                                    <mat-select formControlName='countryCode'>
-                                        <mat-option *ngFor="let code of countrylist" [value]="code.alpha3">
-                                            {{code.country}}
-                                        </mat-option>
-                                    </mat-select>
-                                </mat-form-field>
-                            </div>
-                            <div class="col-md-3">
-                                <mat-form-field>
-                                    <mat-label class="text-capitalize">Fuel Code</mat-label>
+                            <div class="example-container1 row">
+                                <div class="col-md-3">
+                                    <mat-form-field>
+                                        <mat-label class="text-capitalize">Select country Code</mat-label>
+                                        <mat-select formControlName='countryCode'>
+                                            <mat-option *ngFor="let code of countrylist" [value]="code.alpha3">
+                                                {{code.country}}
+                                            </mat-option>
+                                        </mat-select>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-md-3">
+                                    <mat-form-field>
+                                        <mat-label class="text-capitalize">Fuel Code</mat-label>
 
-                                    <mat-select formControlName='fuelCode' placeholder="fuelCode">
+                                        <mat-select formControlName='fuelCode' placeholder="fuelCode">
 
-                                        <mat-option *ngFor="let code of fuellist" [value]="code.code">
-                                            {{code.name}}
-                                        </mat-option>
-                                    </mat-select>
-                                </mat-form-field>
-                            </div>
-                            <div class="col-md-3">
-                                <mat-form-field>
-                                    <mat-label class="text-capitalize">Device Type Code</mat-label>
+                                            <mat-option *ngFor="let code of fuellist" [value]="code.code">
+                                                {{code.name}}
+                                            </mat-option>
+                                        </mat-select>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-md-3">
+                                    <mat-form-field>
+                                        <mat-label class="text-capitalize">Device Type Code</mat-label>
 
-                                    <mat-select formControlName='deviceTypeCode' placeholder="deviceTypeCode">
+                                        <mat-select formControlName='deviceTypeCode' placeholder="deviceTypeCode">
 
-                                        <mat-option *ngFor="let code of devicetypelist" [value]="code.code">
-                                            {{code.name}}
-                                        </mat-option>
-                                    </mat-select>
-                                </mat-form-field>
-                            </div>
-                            
-                            <div class="col-md-3">
-                                <mat-form-field>
-                                    <mat-label class="text-capitalize">off Taker</mat-label>
+                                            <mat-option *ngFor="let code of devicetypelist" [value]="code.code">
+                                                {{code.name}}
+                                            </mat-option>
+                                        </mat-select>
+                                    </mat-form-field>
+                                </div>
 
-                                    <mat-select formControlName='offTaker' placeholder="offTaker">
+                                <div class="col-md-3">
+                                    <mat-form-field>
+                                        <mat-label class="text-capitalize">off Taker</mat-label>
 
-                                        <mat-option *ngFor="let code of offtaker" [value]="code">
-                                            {{code}}
-                                        </mat-option>
-                                    </mat-select>
-                                </mat-form-field>
+                                        <mat-select formControlName='offTaker' placeholder="offTaker">
+
+                                            <mat-option *ngFor="let code of offtaker" [value]="code">
+                                                {{code}}
+                                            </mat-option>
+                                        </mat-select>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-md-3">
+                                    <mat-form-field>
+                                        <mat-label>capacity</mat-label>
+                                        <input matInput placeholder="Search" formControlName='capacity' #input>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-md-2">
+                                    <button class="btn-primary btn text-capitalize px-4"
+                                        (click)="applyFilter()">filter</button>
+                                </div>
+                                <div class="col-md-2">
+                                    <button class="btn-primary btn text-capitalize px-4"
+                                        (click)="reset()">Reset</button>
+                                </div>
+
                             </div>
-                            <div class="col-md-3">
-                                <mat-form-field>
-                                    <mat-label>capacity</mat-label>
-                                    <input matInput placeholder="Search" formControlName='capacity' #input>
-                                </mat-form-field>
-                            </div>
-                            <div class="col-md-2">
-                                <button class="btn-primary btn text-capitalize px-4"
-                                    (click)="applyFilter()">filter</button>
-                            </div>
-                            <div class="col-md-2">
-                                <button class="btn-primary btn text-capitalize px-4"
-                                (click)="reset()">Reset</button>
-                            </div>
-                          
-                        </div>
-</form>
-                        <div class="content mat-elevation-z8 text-center">
-                            <mat-progress-spinner [mode]="'indeterminate'" *ngIf="loading"></mat-progress-spinner>
+                        </form>
+                        <div class="content mat-elevation-z8 text-center" *ngIf="loading">
+                            <!-- <mat-progress-spinner [mode]="'indeterminate'" *ngIf="loading"></mat-progress-spinner> -->
 
                             <table mat-table [dataSource]="dataSource" matSort>
                                 <!--         
@@ -240,7 +240,8 @@
                                 <!-- Position Column -->
                                 <ng-container matColumnDef="onboarding_date">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header> OnBoarding Date </th>
-                                    <td mat-cell *matCellDef="let row;let i=index"> {{row.createdAt| date:'EEE d MMM yyyy hh:mm:ss'}} </td>
+                                    <td mat-cell *matCellDef="let row;let i=index"> {{row.createdAt| date:'EEE d MMM
+                                        yyyy hh:mm:ss'}} </td>
                                 </ng-container>
                                 <ng-container matColumnDef="projectName">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header> projectName </th>
