--- a/apps/drec-angular-ui/src/app/view/add-reservation/add-reservation.component.scss
+++ b/apps/drec-angular-ui/src/app/view/add-reservation/add-reservation.component.scss
@@ -9,3 +9,11 @@
   }table {
     width: 100%;
   }
+  .nested-card-header{
+    padding: 16px 10px 16px !important;
+    background: #e6e6e6 !important;
+  }
+  .nested-card {
+      
+    padding: 0px !important;
+  }
